--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@types/react-dom": "16.8.3",
     "classnames": "^2.2.6",
     "react": "^16.8.5",
+    "react-compound-timer": "^1.0.12",
     "react-dom": "^16.8.5",
     "react-hot-loader": "^4.8.0",
     "react-loadable": "^5.5.0",
+    "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-web-notification": "^0.5.0",
     "typescript": "3.3.4000"
   },
   "scripts": {
