remove forgotten trailing comma

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "format": "yarn run format:ts && yarn run format:css",
     "format:check": "prettier -c 'src/**/*.{ts,tsx}'",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
